// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render SpendingsSummary with 1 spending 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    spending
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render SpendingsSummary with multiple spendings 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    spending
     totaling 
    $235123409.87
  </h1>
</div>
`;
